--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vorepuestos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="css/stylesheet.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -25,7 +24,7 @@
         </ul>
     </nav>
     <main>
-        <section>
+        <section class="carousel">
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -100,8 +99,27 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+        </section> 
+        <section>
+          <p>asdfadsfasdf</p>
+          <br>
+          <p>asdfadsfasdf</p>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
+          <p>asdfadsfasdf</p><br>
         </section>
-        <section></section>
         <section></section>
     </main>
     <footer>
@@ -109,5 +127,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
 </html>
