se relizan cambios en el nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <img src="img/Imagen1.png" alt="vo-repuestos" class="logo">
+        <label class="logo"> Vorepuestos</label>
         <ul>
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">Servicios</a></li>
