Change Some Inf

--- a/index.html
+++ b/index.html
@@ -109,59 +109,80 @@
       <!-- ---------------------------------------  Welcome  --------------------------------------- -->
       <!-- ----------------------------------------------------------------------------------------- -->  
         <section class="welcome">
-          <h1>Welcome to the Best Company</h1>
+          <h1>BIENVENIDO A NUESTRA COMPAÑIA</h1>
+          <p>Somos un almacén de venta de repuestos dedicados a las autopartes eléctricas,<br> 
+            reparación de automóviles y camionetas en cuanto a lo que se refiere cómo “mecánica rápida”, <br>
+            tenemos una amplia experiencia en la gran mayoría de marcas de vehículos, <br>
+            y de la misma forma en marcas de autopartes.</p>
         </section>
 
       <!-- ----------------------------------------------------------------------------------------- -->
       <!-- ---------------------------------------  Services  -------------------------------------- -->
       <!-- ----------------------------------------------------------------------------------------- -->  
         <section class="services">
+          <h2>Servicios</h2>
+          <p>Ofrecer soluciones eficientes,<br> 
+            confiables y duraderas tanto en todo lo relacionado con el mantenimiento y reparación de vehículos,<br> 
+            cómo en la venta de autopartes eléctricas. <br>
+            Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>
           <div class="card" style="width: 18rem;">
             <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Sincronizacion</h5>
+              <p class="card-text">Un óptimo funcionamiento del motor depende de una buena sincronización, 
+                ponemos a punto el motor mediante una limpieza del cuerpo de aceleración, 
+                inyectores, cambio de filtro de aire, bujías y filtro de gasolina.</p>
+              <a href="#" class="btn btn-primary">Un poco mas</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Servicio Electrico Automotriz</h5>
+              <p class="card-text">Revisión y reparación de sistemas eléctricos automotrices vehículos multimarca. 
+                Alternadores, motores de arranque, limpia parabrisas, ventiladores radiador, electricidad en general.</p>
+              <a href="#" class="btn btn-primary">Un poco mas</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Elictricidad y Electronica Automotriz</h5>
+              <p class="card-text">Servicio y mantenimiento de los sistemas eléctricos y electrónicos de automóviles a gasolina, 
+                manejo de datos técnicos, lectura e interpretación de diagramas, 
+                análisis y solución de fallas y de los pasos para el manejo de instrumental computarizado.</p>
+              <a href="#" class="btn btn-primary">Un poco mas</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Revision Tecnomecanica</h5>
+              <p class="card-text">En vorepuestos contamos con equipo de diagnóstico computarizado digital que nos permite evaluar carrocería, 
+                estado de los frenos, dirección, suspensión, sistema de las señales visuales y audibles, 
+                llantas y el conjunto de vidrios de seguridad bajo las normas que reglamentan el sector, 
+                Contamos con analizador de gases para los vehículos.</p>
+              <a href="#" class="btn btn-primary">Un poco mas</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Frenos</h5>
+              <p class="card-text">Los frenos son una parte fundamental en la seguridad de su vehículo por tal razón ofrecemos el servicio de 
+                Inspección y diagnóstico del estado de los frenos de su vehículo, 
+                limpieza y graduación de frenos traseros y delanteros, cambio de pastillas y bandas, cambio de líquido de frenos.</p>
+              <a href="#" class="btn btn-primary">Un poco mas</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Suspension</h5>
+              <p class="card-text">La suspensión es el conjunto de elementos que absorben las anormalidades del terreno y mantiene unidas las 
+                llantas con la carrocería. Tenemos el equipo y personal calificado para revisar y reparar el sistema de frenos 
+                y suspensión de su vehículo.</p>
+              <a href="#" class="btn btn-primary">Un poco mas</a>
             </div>
           </div>
         </section>
