--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <main>
       <!-- ----------------------------------------------------------------------------------------- -->
-      <!-- ---------------------------------------  Carouse  --------------------------------------- -->
+      <!-- ---------------------------------------  Carousel  --------------------------------------- -->
       <!-- ----------------------------------------------------------------------------------------- -->
 
         <section class="carousel">
@@ -84,70 +84,72 @@
       <!-- ----------------------------------------------------------------------------------------- -->
       <!-- ---------------------------------------  Services  -------------------------------------- -->
       <!-- ----------------------------------------------------------------------------------------- -->  
-        <section class="services">
+        <section class="services ">
           <h2>Servicios</h2>
           <p>Ofrecer soluciones eficientes,<br> 
             confiables y duraderas tanto en todo lo relacionado con el mantenimiento y reparación de vehículos,<br> 
             cómo en la venta de autopartes eléctricas. <br>
             Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>
-          <div class="card" style="width: 18rem;">
-            <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Sincronizacion</h5>
-              <p class="card-text">Un óptimo funcionamiento del motor depende de una buena sincronización, 
-                ponemos a punto el motor mediante una limpieza del cuerpo de aceleración, 
-                inyectores, cambio de filtro de aire, bujías y filtro de gasolina.</p>
-              <a href="#" class="btn btn-primary">Un poco mas</a>
+          <div class="d-flex flex-wrap">
+            <div class="card">
+              <img src="img/carrusel1.JPG" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Sincronizacion</h5>
+                <p class="card-text">Un óptimo funcionamiento del motor depende de una buena sincronización, 
+                  ponemos a punto el motor mediante una limpieza del cuerpo de aceleración, 
+                  inyectores, cambio de filtro de aire, bujías y filtro de gasolina.</p>
+                <a href="#" class="btn btn-primary">Un poco mas</a>
+              </div>
             </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Servicio Electrico Automotriz</h5>
-              <p class="card-text">Revisión y reparación de sistemas eléctricos automotrices vehículos multimarca. 
-                Alternadores, motores de arranque, limpia parabrisas, ventiladores radiador, electricidad en general.</p>
-              <a href="#" class="btn btn-primary">Un poco mas</a>
+            <div class="card">
+              <img src="img/carrusel2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Servicio Electrico Automotriz</h5>
+                <p class="card-text">Revisión y reparación de sistemas eléctricos automotrices vehículos multimarca. 
+                  Alternadores, motores de arranque, limpia parabrisas, ventiladores radiador, electricidad en general.</p>
+                <a href="#" class="btn btn-primary">Un poco mas</a>
+              </div>
             </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Elictricidad y Electronica Automotriz</h5>
-              <p class="card-text">Servicio y mantenimiento de los sistemas eléctricos y electrónicos de automóviles a gasolina, 
-                manejo de datos técnicos, lectura e interpretación de diagramas, 
-                análisis y solución de fallas y de los pasos para el manejo de instrumental computarizado.</p>
-              <a href="#" class="btn btn-primary">Un poco mas</a>
+            <div class="card">
+              <img src="img/carrusel3.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Elictricidad y Electronica Automotriz</h5>
+                <p class="card-text">Servicio y mantenimiento de los sistemas eléctricos y electrónicos de automóviles a gasolina, 
+                  manejo de datos técnicos, lectura e interpretación de diagramas, 
+                  análisis y solución de fallas y de los pasos para el manejo de instrumental computarizado.</p>
+                <a href="#" class="btn btn-primary">Un poco mas</a>
+              </div>
             </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Revision Tecnomecanica</h5>
-              <p class="card-text">En vorepuestos contamos con equipo de diagnóstico computarizado digital que nos permite evaluar carrocería, 
-                estado de los frenos, dirección, suspensión, sistema de las señales visuales y audibles, 
-                llantas y el conjunto de vidrios de seguridad bajo las normas que reglamentan el sector, 
-                Contamos con analizador de gases para los vehículos.</p>
-              <a href="#" class="btn btn-primary">Un poco mas</a>
+            <div class="card">
+              <img src="img/carrusel1.JPG" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Revision Tecnomecanica</h5>
+                <p class="card-text">En vorepuestos contamos con equipo de diagnóstico computarizado digital que nos permite evaluar carrocería, 
+                  estado de los frenos, dirección, suspensión, sistema de las señales visuales y audibles, 
+                  llantas y el conjunto de vidrios de seguridad bajo las normas que reglamentan el sector, 
+                  Contamos con analizador de gases para los vehículos.</p>
+                <a href="#" class="btn btn-primary">Un poco mas</a>
+              </div>
             </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Frenos</h5>
-              <p class="card-text">Los frenos son una parte fundamental en la seguridad de su vehículo por tal razón ofrecemos el servicio de 
-                Inspección y diagnóstico del estado de los frenos de su vehículo, 
-                limpieza y graduación de frenos traseros y delanteros, cambio de pastillas y bandas, cambio de líquido de frenos.</p>
-              <a href="#" class="btn btn-primary">Un poco mas</a>
+            <div class="card">
+              <img src="img/carrusel2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Frenos</h5>
+                <p class="card-text">Los frenos son una parte fundamental en la seguridad de su vehículo por tal razón ofrecemos el servicio de 
+                  Inspección y diagnóstico del estado de los frenos de su vehículo, 
+                  limpieza y graduación de frenos traseros y delanteros, cambio de pastillas y bandas, cambio de líquido de frenos.</p>
+                <a href="#" class="btn btn-primary">Un poco mas</a>
+              </div>
             </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/laptop3.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Suspension</h5>
-              <p class="card-text">La suspensión es el conjunto de elementos que absorben las anormalidades del terreno y mantiene unidas las 
-                llantas con la carrocería. Tenemos el equipo y personal calificado para revisar y reparar el sistema de frenos 
-                y suspensión de su vehículo.</p>
-              <a href="#" class="btn btn-primary">Un poco mas</a>
+            <div class="card">
+              <img src="img/carrusel3.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Suspension</h5>
+                <p class="card-text">La suspensión es el conjunto de elementos que absorben las anormalidades del terreno y mantiene unidas las 
+                  llantas con la carrocería. Tenemos el equipo y personal calificado para revisar y reparar el sistema de frenos 
+                  y suspensión de su vehículo.</p>
+                <a href="#" class="btn btn-primary">Un poco mas</a>
+              </div>
             </div>
           </div>
         </section>
@@ -159,13 +161,13 @@
           <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-interval="10000">
-                <img src="img/laptop.jpg" class="d-block w-100" alt="...">
+                <img src="img/carrusel1.JPG" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-interval="2000">
-                <img src="img/laptop2.jpg" class="d-block w-100" alt="...">
+                <img src="img/carrusel2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/mobile.jpg" class="d-block w-100" alt="...">
+                <img src="img/carrusel3.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
@@ -194,17 +196,29 @@
               </div>
           
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="card-body">
+                <div class="card-body d-flex align-content-end flex-wrap">
                   <figure class="figure">
-                    <img src="img/mobile.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
                     <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
                   </figure>
                   <figure class="figure">
-                    <img src="img/mobile.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
                     <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
                   </figure>
                   <figure class="figure">
-                    <img src="img/mobile.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
                     <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
                   </figure>
                 </div>
@@ -219,8 +233,31 @@
                 </h2>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="card-body d-flex align-content-end flex-wrap">
+                  <figure class="figure">
+                    <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
                 </div>
               </div>
             </div>
@@ -233,8 +270,31 @@
                 </h2>
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="card-body d-flex align-content-end flex-wrap">
+                  <figure class="figure">
+                    <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
+                  <figure class="figure">
+                    <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+                  </figure>
                 </div>
               </div>
             </div>
