Se completa el formulario y se agraga la estructura del footer

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vorepuestos</title>
+  <link rel="stylesheet" href="css/whatsapp.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="css/style.css" rel="stylesheet">
-  <link href = "https://file.myfontastic.com/Hkh9iNwEHRpV9egwVYXrpE/icons.css" rel ="stylesheet">
+  <link href="https://file.myfontastic.com/Hkh9iNwEHRpV9egwVYXrpE/icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -121,7 +122,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/carrusel1.JPG class="card-img-top" alt="...">
+          <img src="img/carrusel1.JPG class=" card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Elictricidad y Electronica Automotriz</h5>
             <p class="card-text">Servicio y mantenimiento de los sistemas eléctricos y electrónicos de automóviles a
@@ -330,6 +331,7 @@
     <!-- ----------------------------------------------------------------------------------------- -->
     <!-- ---------------------------------------  Contact  --------------------------------------- -->
     <!-- ----------------------------------------------------------------------------------------- -->
+    <section class="contenedor__all">
       <div class="contenedor">
 
         <h1>Formulario Contactenos</h1>
@@ -350,7 +352,7 @@
 
             <div class="col">
               <i class="icono icon-direction"></i>
-              <p>maicolriola@hotmail.es</p>
+              <p>cll2 #93d- 30</p>
             </div>
 
             <div class="redes-s">
@@ -362,18 +364,71 @@
             </div>
 
           </div>
-      
-        <form action="" method="GET" class="formulario">
-          <input type="text" name="nombre" placeholder="Nombre" id="nombre">
-          <input type="text" name="correo" placeholder="Correo Electrico" id="correo">
-          <input type="text" name="asunto" placeholder="Asunto" id="asunto">
-          <textarea name="mensaje" id="mensaje" placeholder="Mensaje"></textarea>
-          <button type="button  ">Enviar</button>
 
-        </form>
+          <form action="" method="GET" class="formulario">
+            <input type="text" name="nombre" placeholder="Nombre" id="nombre">
+            <input type="text" name="correo" placeholder="Correo Electrico" id="correo">
+            <input type="text" name="asunto" placeholder="Asunto" id="asunto">
+            <textarea name="mensaje" id="mensaje" placeholder="Mensaje"></textarea>
+            <button type="button  ">Enviar</button>
+
+          </form>
+    </section>
   </main>
-  <footer>
-  </footer>
+ <!-- <footer>
+    <div class="contenedor1">
+        <div class="column--informacion">
+            <h2>Mas informacion</h2>
+            <p>La historia del anime, el género de animación de origen japonés, comienza en la segunda
+                década del siglo XX, con una serie de cortometrajes similares a los encontrados en otros
+                países, mayormente influenciados por las obras de Disney.
+
+                Algún tiempo tras la Segunda Guerra Mundial, empezaron a surgir grandes compañías dedicadas
+                tanto a las series televisivas como a los largometrajes, entre las que destaca Toei. </p>
+        </div>
+        <div class="column--redes">
+            <h2>Redes Sociales</h2>
+            <div class="row">
+                <img src="https://image.flaticon.com/icons/svg/145/145802.svg" class="logo">
+                <a href="">Siguenos en Facebook</a>
+
+            </div>
+            <div class="row">
+                <img src="https://image.flaticon.com/icons/svg/185/185985.svg" class="logo">
+                <a href="">Siguenos en Instagram</a>
+
+            </div>
+            <div class="row">
+                <img src="https://image.flaticon.com/icons/svg/733/733579.svg" class="logo">
+                <a href="">Siguenos en Twitter</a>
+
+            </div>
+            <div class="row">
+                <img src="https://image.flaticon.com/icons/svg/145/145808.svg" class="logo">
+                <a href="">Siguenos en Pinteres</a>
+
+            </div>
+        </div>
+        <div class="column--contactos">
+            <h2>Informacion de Contacto</h2>
+            <div class="row2">
+                <img src="https://image.flaticon.com/icons/svg/619/619032.svg" alt="">
+                <p>Bogota DC</p>
+            </div>
+            <div class="row2">
+                <img src="https://image.flaticon.com/icons/svg/601/601248.svg" alt="">
+                <p>maicolriola@hotmail.es</p>
+            </div>
+            <div class="row2">
+                <img src="https://image.flaticon.com/icons/svg/2948/2948010.svg" alt="">
+                <p>3165352911</p>
+            </div>
+
+        </div>
+    </div><br>
+    <hr><br>
+    <h5 style="text-align: center;">Derechos Reservados © | AnimeSA </h5>
+</footer>-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -384,6 +439,11 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <a href="https://api.whatsapp.com/send?phone=+573507318986&text=Bienvenidos%20AKAIROS"
+    class="float animate__animated animate__bounce animate__slower animate__infinite" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+  </a>
 </body>
 
 </html>
