--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+         
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/carrusel1.JPG" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h5>Las Mejores Soluciones</h5>
+              <p>Aplicando las mejores soluciones del mercado.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/carrusel2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5>Soluciones Efectivas</h5>
+              <p>Siempre en busca de las mejores posibilidades y tecnologias</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/slider3.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Mejores Dispositivos</h5>
+              <p>Contamos con los mejores dispositivos del mercado.</p>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
         Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>
       <div class="d-flex flex-wrap">
         <div class="card">
-          <img src="img/carrusel1.JPG" class="card-img-top" alt="...">
+          <img src="galeria/auto1.JPG" class="card-img-top" alt="Sincronizacion">
           <div class="card-body">
             <h5 class="card-title">Sincronizacion</h5>
             <p class="card-text">Un óptimo funcionamiento del motor depende de una buena sincronización,
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/carrusel2.jpg" class="card-img-top" alt="...">
+          <img src="galeria/auto4.JPG" class="card-img-top" alt="Servicio Electrico Automotriz">
           <div class="card-body">
             <h5 class="card-title">Servicio Electrico Automotriz</h5>
             <p class="card-text">Revisión y reparación de sistemas eléctricos automotrices vehículos multimarca.
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/carrusel1.JPG class=" card-img-top" alt="...">
+          <img src="galeria/auto6.JPG" class= "card-img-top" alt="Electricidad y Electronica Automotriz">
           <div class="card-body">
             <h5 class="card-title">Elictricidad y Electronica Automotriz</h5>
             <p class="card-text">Servicio y mantenimiento de los sistemas eléctricos y electrónicos de automóviles a
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/carrusel1.JPG" class="card-img-top" alt="...">
+          <img src="galeria/auto5.JPG" class="card-img-top" alt="Revisión Tecnomecanica">
           <div class="card-body">
             <h5 class="card-title">Revision Tecnomecanica</h5>
             <p class="card-text">En vorepuestos contamos con equipo de diagnóstico computarizado digital que nos permite
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/carrusel2.jpg" class="card-img-top" alt="...">
+          <img src="img/carrusel2.jpg" class="card-img-top" alt="Frenos">
           <div class="card-body">
             <h5 class="card-title">Frenos</h5>
             <p class="card-text">Los frenos son una parte fundamental en la seguridad de su vehículo por tal razón
@@ -157,7 +157,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/carrusel3.jpg" class="card-img-top" alt="...">
+          <img src="img/carrusel3.jpg" class="card-img-top" alt="Suspension">
           <div class="card-body">
             <h5 class="card-title">Suspension</h5>
             <p class="card-text">La suspensión es el conjunto de elementos que absorben las anormalidades del terreno y
