--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <h2 class="mb-0">
               <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
                 data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Collapsible Group Item #1
+                Main
               </button>
             </h2>
           </div>
@@ -247,34 +247,58 @@
             <h2 class="mb-0">
               <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
                 data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Collapsible Group Item #2
+                Baterias
               </button>
             </h2>
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
-                <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod2.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod3.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod4.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod5.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod6.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod7.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod8.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod20.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod21.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod22.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod24.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod25.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
             </div>
@@ -285,34 +309,58 @@
             <h2 class="mb-0">
               <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
                 data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
+                Otros Productos
               </button>
             </h2>
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
-                <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod10.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod11.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod12.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod13.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod14.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="galeria/prod15.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod16.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod17.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod18.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod19.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod23.JPG" class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="galeria/prod1.JPG" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
               </figure>
             </div>
