Se realiza el footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+  <a href="https://api.whatsapp.com/send?phone=+573507318986&text=Bienvenidos%20AKAIROS"
+    class="float animate__animated animate__bounce animate__slower animate__infinite" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+  </a>
   <nav>
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
@@ -38,7 +42,7 @@
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-         
+
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -103,7 +107,7 @@
         Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>
       <div class="d-flex flex-wrap">
         <div class="card">
-          <img src="galeria/auto1.JPG" class="card-img-top" alt="Sincronizacion">
+          <img src="galeria/auto2.JPG" class="card-img-top" alt="Sincronizacion">
           <div class="card-body">
             <h5 class="card-title">Sincronizacion</h5>
             <p class="card-text">Un óptimo funcionamiento del motor depende de una buena sincronización,
@@ -122,7 +126,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="galeria/auto6.JPG" class= "card-img-top" alt="Electricidad y Electronica Automotriz">
+          <img src="galeria/auto6.JPG" class="card-img-top" alt="Electricidad y Electronica Automotriz">
           <div class="card-body">
             <h5 class="card-title">Elictricidad y Electronica Automotriz</h5>
             <p class="card-text">Servicio y mantenimiento de los sistemas eléctricos y electrónicos de automóviles a
@@ -145,7 +149,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/carrusel2.jpg" class="card-img-top" alt="Frenos">
+          <img src="galeria/Frenos.jpg" class="card-img-top" alt="Frenos">
           <div class="card-body">
             <h5 class="card-title">Frenos</h5>
             <p class="card-text">Los frenos son una parte fundamental en la seguridad de su vehículo por tal razón
@@ -157,7 +161,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/carrusel3.jpg" class="card-img-top" alt="Suspension">
+          <img src="galeria/Suspension.png" class="card-img-top" alt="Suspension">
           <div class="card-body">
             <h5 class="card-title">Suspension</h5>
             <p class="card-text">La suspensión es el conjunto de elementos que absorben las anormalidades del terreno y
@@ -423,60 +427,52 @@
           </form>
     </section>
   </main>
- <!-- <footer>
+  <footer>
     <div class="contenedor1">
-        <div class="column--informacion">
-            <h2>Mas informacion</h2>
-            <p>La historia del anime, el género de animación de origen japonés, comienza en la segunda
-                década del siglo XX, con una serie de cortometrajes similares a los encontrados en otros
-                países, mayormente influenciados por las obras de Disney.
-
-                Algún tiempo tras la Segunda Guerra Mundial, empezaron a surgir grandes compañías dedicadas
-                tanto a las series televisivas como a los largometrajes, entre las que destaca Toei. </p>
-        </div>
-        <div class="column--redes">
-            <h2>Redes Sociales</h2>
-            <div class="row">
-                <img src="https://image.flaticon.com/icons/svg/145/145802.svg" class="logo">
-                <a href="">Siguenos en Facebook</a>
-
-            </div>
-            <div class="row">
-                <img src="https://image.flaticon.com/icons/svg/185/185985.svg" class="logo">
-                <a href="">Siguenos en Instagram</a>
-
-            </div>
-            <div class="row">
-                <img src="https://image.flaticon.com/icons/svg/733/733579.svg" class="logo">
-                <a href="">Siguenos en Twitter</a>
-
-            </div>
-            <div class="row">
-                <img src="https://image.flaticon.com/icons/svg/145/145808.svg" class="logo">
-                <a href="">Siguenos en Pinteres</a>
-
-            </div>
-        </div>
-        <div class="column--contactos">
-            <h2>Informacion de Contacto</h2>
-            <div class="row2">
-                <img src="https://image.flaticon.com/icons/svg/619/619032.svg" alt="">
-                <p>Bogota DC</p>
-            </div>
-            <div class="row2">
-                <img src="https://image.flaticon.com/icons/svg/601/601248.svg" alt="">
-                <p>maicolriola@hotmail.es</p>
-            </div>
-            <div class="row2">
-                <img src="https://image.flaticon.com/icons/svg/2948/2948010.svg" alt="">
-                <p>3165352911</p>
-            </div>
+      <div class="column--informacion">
+        <h2>Mas informacion</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, corrupti. Dignissimos, aperiam. Eveniet
+          assumenda est officiis eius provident rerum dignissimos quas quibusdam temporibus in aliquid distinctio,
+          expedita minus? Tempore, similique.. </p>
+      </div>
+      <div class="column--redes">
+        <h2>Redes Sociales</h2>
+        <div class="row">
+          <img src="https://image.flaticon.com/icons/svg/145/145802.svg">
+          <a href="">Siguenos en Facebook</a>
 
         </div>
+        <div class="row">
+          <img src="https://www.flaticon.com/svg/static/icons/svg/179/179328.svg">
+          <a href="">Siguenos en Instagram</a>
+
+        </div>
+        <div class="row">
+          <img src="https://www.flaticon.com/svg/static/icons/svg/145/145812.svg">
+          <a href="">Siguenos en Twitter</a>
+        </div>
+      </div>
+      <div class="column--contactos">
+        <h2>Informacion de Contacto</h2>
+        <div class="row2">
+          <img src="https://www.flaticon.es/svg/static/icons/svg/2991/2991231.svg" alt="">
+          <p>Bogota DC</p>
+        </div>
+        <div class="row2">
+          <img src="https://www.flaticon.es/svg/static/icons/svg/855/855502.svg" alt="">
+          <p>maicolriola@hotmail.es</p>
+        </div>
+        <div class="row2">
+          <img src="https://www.flaticon.es/svg/static/icons/svg/644/644458.svg" alt="">
+          <p>3165352911</p>
+        </div>
+
+      </div>
     </div><br>
-    <hr><br>
-    <h5 style="text-align: center;">Derechos Reservados © | AnimeSA </h5>
-</footer>-->
+    <hr style="background: aliceblue;"><br>
+    <h5 style="text-align: center;color: ;">Derechos Reservados © | Vorepuestos </h5>
+  </footer>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -486,12 +482,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
+
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <a href="https://api.whatsapp.com/send?phone=+573507318986&text=Bienvenidos%20AKAIROS"
-    class="float animate__animated animate__bounce animate__slower animate__infinite" target="_blank">
-    <i class="fa fa-whatsapp my-float"></i>
-  </a>
+
 </body>
 
 </html>
