--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
                 <figcaption class="figure-caption text-right">Bateria Silver Cast.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/prod21.JPG" class="figure-img img-fluid rounded" alt="Bateria Coexito Evolution">
+                <img src="images/galeria/prod21.JPG" class="figure-img img-fluid rounded"
+                  alt="Bateria Coexito Evolution">
                 <figcaption class="figure-caption text-right">Bateria Coexito Evolution.</figcaption>
               </figure>
               <figure class="figure">
@@ -353,7 +354,8 @@
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
-                <img src="images/galeria/prod10.JPG" class="figure-img img-fluid rounded" alt="Cables de encendido Bosch">
+                <img src="images/galeria/prod10.JPG" class="figure-img img-fluid rounded"
+                  alt="Cables de encendido Bosch">
                 <figcaption class="figure-caption text-right">Cables de encendido Bosch.</figcaption>
               </figure>
               <figure class="figure">
@@ -361,11 +363,14 @@
                 <figcaption class="figure-caption text-right">Fuel injector PETRO.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/prod12.JPG" class="figure-img img-fluid rounded" alt="Limpiador del cuerpo de aceleracion y partes Injetech">
-                <figcaption class="figure-caption text-right">Limpiador del cuerpo de aceleracion y partes Injetech.</figcaption>
+                <img src="images/galeria/prod12.JPG" class="figure-img img-fluid rounded"
+                  alt="Limpiador del cuerpo de aceleracion y partes Injetech">
+                <figcaption class="figure-caption text-right">Limpiador del cuerpo de aceleracion y partes Injetech.
+                </figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/prod13.JPG" class="figure-img img-fluid rounded" alt="Liquido de freno Bosch DOT4">
+                <img src="images/galeria/prod13.JPG" class="figure-img img-fluid rounded"
+                  alt="Liquido de freno Bosch DOT4">
                 <figcaption class="figure-caption text-right">Liquido de freno Bosch DOT4.</figcaption>
               </figure>
               <figure class="figure">
@@ -373,7 +378,8 @@
                 <figcaption class="figure-caption text-right">Bosch super 4.</figcaption>
               </figure>
               <figure class="figure">
-                <img src="images/galeria/prod15.JPG" class="figure-img img-fluid rounded" alt="Pastillas de freno Bosch">
+                <img src="images/galeria/prod15.JPG" class="figure-img img-fluid rounded"
+                  alt="Pastillas de freno Bosch">
                 <figcaption class="figure-caption text-right">Pastillas de freno Bosch.</figcaption>
               </figure>
               <figure class="figure">
@@ -410,14 +416,43 @@
     <!-- ---------------------------------------     We    --------------------------------------- -->
     <!-- ----------------------------------------------------------------------------------------- -->
     <section class="weAre" id="ours">
-      <h2>nosotros</h2>
+      <div class="nosotros">
+        <div class="iframe">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15905.216414732615!2d-74.0540528!3d4.7171444!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2bd2031bcefb37cb!2sV.O.%20Repuestos!5e0!3m2!1sen!2sco!4v1604504820149!5m2!1sen!2sco"
+            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
+        </div>
+        <h2>nosotros</h2>
+        <p style="color: aliceblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse minima ratione unde
+          quasi quaerat iste earum
+          ullam quibusdam, voluptas numquam
+          voluptatum adipisci reprehenderit pariatur cum accusantium molestiae nostrum temporibus nobis!</p>
+      </div>
+    </section>
+    <section id="info">
+      <h3 id="servicios" style="font-size: 2.5em">NUESTROS EQUIPO</h3>
+      <div class="contenedor">
+        <div class="info-vo">
+          <img src="images/img/ual.png"></br>
+          <h4>Gerente general</h4>
+        </div>
+        <div class="info-vo">
+          <img src="images/img/ual.png"/></br>
+          <h4>Asesor</h4>
+        </div>
+        <div class="info-vo">
+          <img src="images/img/ual.png"/></br>
+          <h4>Contadora</h4>
+        </div>
+      </div>
     </section>
 
     <!-- ----------------------------------------------------------------------------------------- -->
     <!-- ---------------------------------------  Contact  --------------------------------------- -->
     <!-- ----------------------------------------------------------------------------------------- -->
     <section class="contenedor__all" id="contact">
-      <div class="contenedor" >
+      <div class="contenedor">
 
         <h1>Formulario Contactenos</h1>
 
