Arreglo del footer y cambio de galeria

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- ----------------------------------------------------------------------------------------- -->
     <section class="services" id="services">
       <h2>Servicios</h2>
-      <p class="solutions">Ofrecer soluciones eficientes,
+      <p>Ofrecer soluciones eficientes,<br>
         confiables y duraderas tanto en todo lo relacionado con el mantenimiento y reparación de vehículos,<br>
         cómo en la venta de autopartes eléctricas. <br>
         Desarrollando e implementando nuevos procesos para prestar un servicio sostenible en el mercado</p>
@@ -182,10 +182,10 @@
     <section class="marksCarrusel">
       <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active" data-interval="10000">
             <img src="images/marcas/bg.png" class="d-block w-100" alt="Chevrolet">
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-interval="2000">
             <img src="images/marcas/bg1.png" class="d-block w-100" alt="Fiat">
           </div>
           <div class="carousel-item">
@@ -246,50 +246,12 @@
             <h2 class="mb-0">
               <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
                 data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Main
+                BATERIAS
               </button>
             </h2>
           </div>
 
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-            <div class="card-body d-flex align-content-end flex-wrap">
-              <figure class="figure">
-                <img src="images/img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
-                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-              </figure>
-              <figure class="figure">
-                <img src="images/img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
-                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-              </figure>
-              <figure class="figure">
-                <img src="images/img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
-                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-              </figure>
-              <figure class="figure">
-                <img src="images/img/carrusel1.JPG" class="figure-img img-fluid rounded" alt="...">
-                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-              </figure>
-              <figure class="figure">
-                <img src="images/img/carrusel2.jpg" class="figure-img img-fluid rounded" alt="...">
-                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-              </figure>
-              <figure class="figure">
-                <img src="images/img/carrusel3.jpg" class="figure-img img-fluid rounded" alt="...">
-                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-              </figure>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Baterias
-              </button>
-            </h2>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body d-flex align-content-end flex-wrap">
               <figure class="figure">
                 <img src="images/galeria/prod2.JPG" class="figure-img img-fluid rounded" alt="Bateria Ford"
@@ -344,6 +306,21 @@
             </div>
           </div>
         </div>
+       <!-- <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h2 class="mb-0">
+              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
+                data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Baterias
+              </button>
+            </h2>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+            <div class="card-body d-flex align-content-end flex-wrap">
+              
+            </div>
+          </div>
+        </div>-->
         <div class="card">
           <div class="card-header" id="headingThree">
             <h2 class="mb-0">
@@ -422,11 +399,11 @@
         <div class="google_map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15905.216414732615!2d-74.0540528!3d4.7171444!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2bd2031bcefb37cb!2sV.O.%20Repuestos!5e0!3m2!1sen!2sco!4v1604504820149!5m2!1sen!2sco"
-             frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            width="450" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
             tabindex="0"></iframe>
         </div>
         <div class="paragraph">
-          <h2 style="text-align: center; margin-top: 20px;">NOSOTROS</h2>
+          <h1 style="text-align: center; margin-top: 20px;">NOSOTROS</h1>
           <p style="color: aliceblue;">Somos una empresa altamente competitiva tanto en el sector de venta de autopartes
             eléctricas, cómo en el servicio de mecánica rápida,
             esto lo lograremos a la vanguardia de la tecnología, desarrollando e implementando nuevos procesos para
@@ -440,19 +417,19 @@
 
     </section>
     <section id="info">
-      <h2 style="color: #202020;">NUESTRO EQUIPO</h2>
+      <h1 style="color: #202020;">NUESTRO EQUIPO</h1>
       <div class="contenedor">
         <div class="info-vo">
           <img src="images/img/foto.jpg"></br></br>
-          <h3 style="color: #202020;">Gerente general</h3>
+          <h2 style="color: #202020;">Gerente general</h2>
         </div>
         <div class="info-vo">
           <img src="images/img/foto1.jpg" /></br></br>
-          <h3 style="color: #202020;">Asesor</h3>
+          <h2 style="color: #202020;">Asesor</h2>
         </div>
         <div class="info-vo">
           <img src="images/img/foto3.jpg" /></br></br>
-          <h3 style="color: #202020;">Contadora</h3>
+          <h2 style="color: #202020;">Contadora</h2>
         </div>
       </div>
     </section>
@@ -463,7 +440,7 @@
     <section class="contenedor__all" id="contact">
       <div class="contenedor">
 
-        <h2>Formulario Contactenos</h2>
+        <h1>Formulario Contactenos</h1>
 
         <div class="contenido">
 
@@ -535,16 +512,16 @@
       <div class="column--contactos">
         <h2>Información de Contacto</h2>
         <div class="row2">
-          <img src="https://www.flaticon.es/svg/static/icons/svg/2991/2991231.svg" alt="">
+          <img src="https://www.flaticon.com/svg/static/icons/svg/544/544736.svg" alt="">
           <p><a href=" https://goo.gl/maps/Xzh5YmVQky9Tz3Rs7" style="color: aliceblue;">Cra 46 # 130 - 56
               Bogotá</p></a>
         </div>
         <div class="row2">
-          <img src="https://www.flaticon.es/svg/static/icons/svg/855/855502.svg" alt="">
+          <img src="https://www.flaticon.com/svg/static/icons/svg/539/539232.svg" alt="">
           <p><a href="mailto:rochipili@outlook.es" style="color: aliceblue;">rochipili@outlook.es</p></a>
         </div>
         <div class="row2">
-          <img src="https://www.flaticon.es/svg/static/icons/svg/644/644458.svg" alt="">
+          <img src="https://www.flaticon.com/svg/static/icons/svg/540/540655.svg" alt="">
           <p><a href="tel:310-791-2748" style="color: aliceblue;">(+57) 310 791-2748 </a></p>
         </div>
       </div>
