Add New Gallery Products

--- a/index.html
+++ b/index.html
@@ -324,6 +324,36 @@
                 <img src="images/galeria/prod1.JPG" class="figure-img img-fluid rounded" alt="Otros">
                 <figcaption class="figure-caption text-right">Otros.</figcaption>
               </figure>
+              <figure class="figure">
+                <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.18.04 PM.jpeg"
+                  class="figure-img img-fluid rounded" alt="Total parts">
+                <figcaption class="figure-caption text-right">Total parts.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.36 PM.jpeg"
+                  class="figure-img img-fluid rounded" alt="Optima Batteries">
+                <figcaption class="figure-caption text-right">Optima Batteries.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.37 PM.jpeg"
+                  class="figure-img img-fluid rounded" alt="Otros">
+                <figcaption class="figure-caption text-right">Otros.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.40 PM.jpeg"
+                  class="figure-img img-fluid rounded" alt="Total parts">
+                <figcaption class="figure-caption text-right">Total parts.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.43 PM.jpeg"
+                  class="figure-img img-fluid rounded" alt="Optima Batteries">
+                <figcaption class="figure-caption text-right">Optima Batteries.</figcaption>
+              </figure>
+              <figure class="figure">
+                <img src="images/Otros Productos/WhatsApp Image 2020-11-17 at 8.22.46 PM (1).jpeg"
+                  class="figure-img img-fluid rounded" alt="Otros">
+                <figcaption class="figure-caption text-right">Otros.</figcaption>
+              </figure>
             </div>
           </div>
         </div>
